--- a/MC.css
+++ b/MC.css
@@ -1,21 +1,17 @@
 *{
     margin: 0;
-    padding: 0;
+    padding:0;
     font-family: century 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-
-@keyframes slideleft{
-	from{
-		background-position:o%;
-	}
-	to{
-		background-position:90000%;
-	}
+h1{
+    text-align: center;
+    font-size: 50px;
+    
 }
-header{
+
+body{
  background-image: url("mochoicebg.jpg");
- background-repeat:repeat-x;
- animation:slideleft 5000s infinite linear;
+ background-repeat:no-repeat;
  background-attachment:fixed;
  position: relative;
  min-height:100vh;
@@ -23,25 +19,22 @@ header{
  background-position: center;
 }
 
-h1{
-    text-align: center;
-    display: inline-block;
 
-}
 
 ul{
     list-style-type: none;
-    margin: 0px;
-    padding: 50px;
+    margin: 0;
+    padding: 20px;
     display: block;
     overflow: hidden;
-    background-color: #111;
-    position: sticky;
+    background-color: #34495e;
+    
     
 }
  li{
     display:inline-block;
-    paddding:20px;
+    padding:5px;
+    float: left;
     
 }
  li a{
@@ -58,40 +51,70 @@ li a:hover{
 li a.active{
     background-color:#000;
 }
-li a, .dropbtn{
-    display:inline-block;
-    color:white;
+
+li a, .dropbtn {
+    display: inline-block;
+    color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-}
-li .dropdown:hover .dropbtn{
-    background-color: #000;
-}
-li.dropdown{
+  }
+  
+  li a:hover, .dropdown:hover .dropbtn {
+    background-color:#000;
+  }
+  
+  li.dropdown {
     display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color:#111;
+    min-width: 146px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    
+  }
+  
+  .dropdown-content a {
+    color: #fff;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .dropdown-content a:hover {background-color: #000;}
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+.footer{
+    position:fixed;
+    left:0;
+    bottom:0;
+    background-color:#111;
+    color:#fff;
+    width:100%;
+    padding: 30px;
+}
+.footer a{
+color:#fff;
+padding:5px;
+
 }
 
-.dropdown-content {
-        display:none;
-        position:absolute;
-        background-color:#f9f9f9;
-        min-width: 146px;
-        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-        z-index:1;
-    }
-    .dropdown-content a{
-        color: #fff;
-        background-color:#111;
-        padding:6px 10px;
-        text-decoration: none;
-        display: block;
-        text-align: left;
-        
-    }
-    .dropdown-content a:hover{background-color:ffffff;}
-
-    .dropdown:hover .dropdown-content{
-        display:block;
-        z-index: 2;
-    }
+.footer a:hover{
+    background-color: #34495e;
+}
+.social{
+    font-weight: bold;
+    font-size: 14px;
+}
+.copyright{
+    text-align: left;
+    position: relative;
+    transform: translate(20%,20%);
+}
